Quartz sync: Sep 12, 2024, 4:54 PM